force styling of buttons

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           </span>
         </div>
       </a>
-      <nav id="navmenu-desktop" class="m-menu--desktop" role="tablist">
-        <a rel="noopener" class="m-menu--desktop__toggle collapsed" href="https://www.mbta.com/menu#Transit-section" role="tab" data-toggle="collapse" data-parent="#navmenu-desktop" data-target="#transit" aria-expanded="false" aria-controls="transit">
+      <nav style="width:100%" id="navmenu-desktop" class="m-menu--desktop" role="tablist">
+        <a style="margin-right: 0.5rem;" rel="noopener" class="m-menu--desktop__toggle collapsed" href="https://www.mbta.com/menu#Transit-section" role="tab" data-toggle="collapse" data-parent="#navmenu-desktop" data-target="#transit" aria-expanded="false" aria-controls="transit">
           Transit
         </a>
         <div class="m-menu--desktop__menu">
@@ -183,7 +183,7 @@
             </div>
           </div>
         </div>
-        <a rel="noopener" class="m-menu--desktop__toggle collapsed" href="https://www.mbta.com/menu#Fares-section" role="tab" data-toggle="collapse" data-parent="#navmenu-desktop" data-target="#fares" aria-expanded="false" aria-controls="fares">
+        <a style="margin-right: 0.5rem;" rel="noopener" class="m-menu--desktop__toggle collapsed" href="https://www.mbta.com/menu#Fares-section" role="tab" data-toggle="collapse" data-parent="#navmenu-desktop" data-target="#fares" aria-expanded="false" aria-controls="fares">
           Fares
         </a>
         <div class="m-menu--desktop__menu">
@@ -322,7 +322,7 @@
             </div>
           </div>
         </div>
-        <a rel="noopener" class="m-menu--desktop__toggle collapsed" href="https://www.mbta.com/menu#Contact-section" role="tab" data-toggle="collapse" data-parent="#navmenu-desktop" data-target="#contact" aria-expanded="false" aria-controls="contact">
+        <a style="margin-right: 0.5rem;" rel="noopener" class="m-menu--desktop__toggle collapsed" href="https://www.mbta.com/menu#Contact-section" role="tab" data-toggle="collapse" data-parent="#navmenu-desktop" data-target="#contact" aria-expanded="false" aria-controls="contact">
           Contact
         </a>
         <div class="m-menu--desktop__menu">
