update files to add mobile menu, fix styles

--- a/footer.html
+++ b/footer.html
@@ -1,305 +1,1 @@
-<footer class="m-footer l-footer">
-  <div class="container">
-    <ul class="row list-unstyled">
-      <li class="m-footer__group">
-        <div class="m-footer__group-title">
-          Transit Services
-        </div>
-        <ul class="list-unstyled">
-          <li class="m-footer__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/schedules/subway">
-              Subway
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/schedules/bus">
-              Bus
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/schedules/commuter-rail">
-              Commuter Rail
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/schedules/ferry">
-              Ferry
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/accessibility/the-ride">
-              The RIDE
-            </a>
-          </li>
-        </ul>
-      </li>
-      <li class="m-footer__group">
-        <div class="m-footer__group-title">
-          Plan Your Journey
-        </div>
-        <ul class="list-unstyled">
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/trip-planner">
-              Trip Planner
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/stops">
-              Station Info
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/alerts">
-              Service Alerts
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/maps">
-              Maps
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/destinations">
-              Destinations
-            </a>
-          </li>
-        </ul>
-      </li>
-      <li class="m-footer__group">
-        <div class="m-footer__group-title">
-          Riding the T
-        </div>
-        <ul class="list-unstyled">
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/accessibility">
-              Accessibility
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/parking">
-              Parking
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/bikes">
-              Bikes
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/language-services">
-              Language Services
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/safety">
-              Safety
-            </a>
-          </li>
-        </ul>
-      </li>
-      <li class="m-footer__group">
-        <div class="m-footer__group-title">
-          Fares &amp; Passes
-        </div>
-        <ul class="list-unstyled">
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/fares">
-              Fares Overview
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener noreferrer" href="https://charliecard.mbta.com" target="_blank">
-              Add Value to CharlieCard
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/fares/reduced">
-              Reduced Fares
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener noreferrer" href="https://commerce.mbta.com" target="_blank">
-              Order Monthly Passes
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/pass-program">
-              Institutional Sales
-            </a>
-          </li>
-        </ul>
-      </li>
-      <li class="m-footer__group">
-        <div class="m-footer__group-title">
-          About Us
-        </div>
-        <ul class="list-unstyled">
-          <li class="m-footer__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/leadership">
-              Leadership
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/news">
-              News &amp; Updates
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/events">
-              Events
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener noreferrer" href="http://www.mbtabackontrack.com/performance/index.html#/home" target="_blank">
-              Performance
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/careers">
-              Careers
-            </a>
-          </li>
-        </ul>
-      </li>
-      <li class="m-footer__group">
-        <div class="m-footer__group-title">
-          Business Center
-        </div>
-        <ul class="list-unstyled">
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/business">
-              Business Opportunities
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/developers">
-              Developers
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/financials">
-              Financials
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/innovation">
-              Innovation
-            </a>
-          </li>
-          <li class="m-footer__item">
-            <a rel="noopener" href="https://www.mbta.com/engineering/design-standards-and-guidelines">
-              Engineering Design Standards
-            </a>
-          </li>
-        </ul>
-      </li>
-      <li class="m-footer__group m-footer--mobile__group">
-        <div class="m-footer__group-title">
-          Customer Support
-        </div>
-        <ul class="list-unstyled m-footer--mobile__items">
-          <li class="m-footer__item m-footer--mobile__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support">
-              Contact Us
-            </a>
-          </li>
-          <li class="m-footer__item m-footer--mobile__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support/lost-and-found">
-              Lost and Found
-            </a>
-          </li>
-          <li class="m-footer__item m-footer--mobile__item">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies">
-              Policies
-            </a>
-          </li>
-          <li class="m-footer__item hidden-sm-down">
-            <a rel="noopener noreferrer" href="https://massachusettsdot.mycusthelp.com/WEBAPP/_rs/supporthome.aspx?lp=3&amp;COID=64D93B66" target="_blank">
-              Request Public Records
-            </a>
-          </li>
-          <li class="m-footer__item hidden-sm-down">
-            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies/title-vi">
-              Civil Rights
-            </a>
-          </li>
-        </ul>
-      </li>
-      <li class="m-footer__group">
-        <div class="m-footer__group-title">
-          Follow Us Online
-        </div>
-        <ul class="c-social">
-          <li class="c-social__item m-footer__item">
-            <a rel="noopener noreferrer" class="c-social__link c-social--facebook" href="https://www.facebook.com/TheMBTA/" target="_blank">
-              <i aria-hidden="true" class="notranslate fa fa-facebook ">
-              </i>
-              <span class="sr-only">
-                MBTA Facebook
-              </span>
-            </a>
-          </li>
-          <li class="c-social__item m-footer__item">
-            <a rel="noopener noreferrer" class="c-social__link c-social--instagram" href="https://www.instagram.com/thembta/" target="_blank">
-              <i aria-hidden="true" class="notranslate fa fa-instagram ">
-              </i>
-              <span class="sr-only">
-                MBTA Instagram
-              </span>
-            </a>
-          </li>
-          <li class="c-social__item m-footer__item">
-            <a rel="noopener noreferrer" class="c-social__link c-social--linkedin" href="https://linkedin.com/company/mbta" target="_blank">
-              <i aria-hidden="true" class="notranslate fa fa-linkedin ">
-              </i>
-              <span class="sr-only">
-                MBTA Linkedin
-              </span>
-            </a>
-          </li>
-          <li class="c-social__item m-footer__item">
-            <a rel="noopener noreferrer" class="c-social__link c-social--twitter" href="https://twitter.com/MBTA" target="_blank">
-              <i aria-hidden="true" class="notranslate fa fa-twitter ">
-              </i>
-              <span class="sr-only">
-                MBTA Twitter
-              </span>
-            </a>
-          </li>
-          <li class="c-social__item m-footer__item">
-            <a rel="noopener noreferrer" class="c-social__link c-social--youtube" href="https://www.youtube.com/user/mbtagm/" target="_blank">
-              <i aria-hidden="true" class="notranslate fa fa-youtube ">
-              </i>
-              <span class="sr-only">
-                MBTA Youtube
-              </span>
-            </a>
-          </li>
-          <li class="c-social__item m-footer__item">
-            <a rel="noopener noreferrer" class="c-social__link tiktok" href="https://www.tiktok.com/@thembta" target="_blank">
-              <span class="notranslate c-svg__icon-tiktok">
-                <svg xmlns="http://www.w3.org/2000/svg" width="522.29" height="598.92" viewbox="0 0 522.29 598.92">
-                  <defs>
-                    <style>
-                      .cls-1{fill:#fff;}
-                    </style>
-                  </defs>
-                  <g id="LOGOS">
-                    <path class="cls-1" d="M444.28,120.05a143.54,143.54,0,0,1-62.81-93.92A143.33,143.33,0,0,1,379,0h-103l-.17,412.66a86.5,86.5,0,1,1-86.39-89.82,84.94,84.94,0,0,1,25.54,4V221.73a188.85,188.85,0,0,0-25.54-1.85C85,219.88,0,304.9,0,409.4A189.82,189.82,0,0,0,189.52,598.92C294,598.92,379,513.91,379,409.4V200.15a244.87,244.87,0,0,0,143.25,46.07v-103A142.39,142.39,0,0,1,444.28,120.05Z">
-                    </path>
-                  </g>
-                </svg>
-              </span>
-              <span class="sr-only">
-                MBTA TikTok
-              </span>
-            </a>
-          </li>
-        </ul>
-      </li>
-    </ul>
-    <p class="m-footer__copyright">
-      © Massachusetts Bay Transportation Authority, all rights reserved.
-    </p>
-  </div>
-</footer>
+<footer class="m-footer l-footer"><div class="container"><ul class="row list-unstyled"><li class="m-footer__group"><div class="m-footer__group-title">Transit Services</div><ul class="list-unstyled"><li class="m-footer__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/schedules/subway">Subway</a></li><li class="m-footer__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/schedules/bus">Bus</a></li><li class="m-footer__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/schedules/commuter-rail">Commuter Rail</a></li><li class="m-footer__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/schedules/ferry">Ferry</a></li><li class="m-footer__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/accessibility/the-ride">The RIDE</a></li></ul></li><li class="m-footer__group"><div class="m-footer__group-title">Plan Your Journey</div><ul class="list-unstyled"><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/trip-planner">Trip Planner</a></li><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/stops">Station Info</a></li><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/alerts">Service Alerts</a></li><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/maps">Maps</a></li><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/destinations">Destinations</a></li></ul></li><li class="m-footer__group"><div class="m-footer__group-title">Riding the T</div><ul class="list-unstyled"><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/accessibility">Accessibility</a></li><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/parking">Parking</a></li><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/bikes">Bikes</a></li><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/language-services">Language Services</a></li><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/safety">Safety</a></li></ul></li><li class="m-footer__group"><div class="m-footer__group-title">Fares &amp; Passes</div><ul class="list-unstyled"><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/fares">Fares Overview</a></li><li class="m-footer__item"><a rel="noopener noreferrer" href="https://charliecard.mbta.com" target="_blank">Add Value to CharlieCard</a></li><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/fares/reduced">Reduced Fares</a></li><li class="m-footer__item"><a rel="noopener noreferrer" href="https://commerce.mbta.com" target="_blank">Order Monthly Passes</a></li><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/pass-program">Institutional Sales</a></li></ul></li><li class="m-footer__group"><div class="m-footer__group-title">About Us</div><ul class="list-unstyled"><li class="m-footer__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/leadership">Leadership</a></li><li class="m-footer__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/news">News &amp; Updates</a></li><li class="m-footer__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/events">Events</a></li><li class="m-footer__item"><a rel="noopener noreferrer" href="http://www.mbtabackontrack.com/performance/index.html#/home" target="_blank">Performance</a></li><li class="m-footer__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/careers">Careers</a></li></ul></li><li class="m-footer__group"><div class="m-footer__group-title">Business Center</div><ul class="list-unstyled"><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/business">Business Opportunities</a></li><li class="m-footer__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/developers">Developers</a></li><li class="m-footer__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/financials">Financials</a></li><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/innovation">Innovation</a></li><li class="m-footer__item"><a rel="noopener" href="https://www.mbta.com/engineering/design-standards-and-guidelines">Engineering Design Standards</a></li></ul></li><li class="m-footer__group m-footer--mobile__group"><div class="m-footer__group-title">Customer Support</div><ul class="list-unstyled m-footer--mobile__items"><li class="m-footer__item m-footer--mobile__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support">Contact Us</a></li><li class="m-footer__item m-footer--mobile__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support/lost-and-found">Lost and Found</a></li><li class="m-footer__item m-footer--mobile__item"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies">Policies</a></li><li class="m-footer__item hidden-sm-down"><a rel="noopener noreferrer" href="https://massachusettsdot.mycusthelp.com/WEBAPP/_rs/supporthome.aspx?lp=3&amp;COID=64D93B66" target="_blank">Request Public Records</a></li><li class="m-footer__item hidden-sm-down"><a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies/title-vi">Civil Rights</a></li></ul></li><li class="m-footer__group"><div class="m-footer__group-title">Follow Us Online</div><ul class="c-social"><li class="c-social__item m-footer__item"><a rel="noopener noreferrer" class="c-social__link c-social--facebook" href="https://www.facebook.com/TheMBTA/" target="_blank"><i aria-hidden="true" class="notranslate fa fa-facebook "></i><span class="sr-only">MBTA Facebook</span></a></li><li class="c-social__item m-footer__item"><a rel="noopener noreferrer" class="c-social__link c-social--instagram" href="https://www.instagram.com/thembta/" target="_blank"><i aria-hidden="true" class="notranslate fa fa-instagram "></i><span class="sr-only">MBTA Instagram</span></a></li><li class="c-social__item m-footer__item"><a rel="noopener noreferrer" class="c-social__link c-social--linkedin" href="https://linkedin.com/company/mbta" target="_blank"><i aria-hidden="true" class="notranslate fa fa-linkedin "></i><span class="sr-only">MBTA Linkedin</span></a></li><li class="c-social__item m-footer__item"><a rel="noopener noreferrer" class="c-social__link c-social--twitter" href="https://twitter.com/MBTA" target="_blank"><i aria-hidden="true" class="notranslate fa fa-twitter "></i><span class="sr-only">MBTA Twitter</span></a></li><li class="c-social__item m-footer__item"><a rel="noopener noreferrer" class="c-social__link c-social--youtube" href="https://www.youtube.com/user/mbtagm/" target="_blank"><i aria-hidden="true" class="notranslate fa fa-youtube "></i><span class="sr-only">MBTA Youtube</span></a></li><li class="c-social__item m-footer__item"><a rel="noopener noreferrer" class="c-social__link tiktok" href="https://www.tiktok.com/@thembta" target="_blank"><span class="notranslate c-svg__icon-tiktok"><svg xmlns="http://www.w3.org/2000/svg" width="522.29" height="598.92" viewbox="0 0 522.29 598.92"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="LOGOS"><path class="cls-1" d="M444.28,120.05a143.54,143.54,0,0,1-62.81-93.92A143.33,143.33,0,0,1,379,0h-103l-.17,412.66a86.5,86.5,0,1,1-86.39-89.82,84.94,84.94,0,0,1,25.54,4V221.73a188.85,188.85,0,0,0-25.54-1.85C85,219.88,0,304.9,0,409.4A189.82,189.82,0,0,0,189.52,598.92C294,598.92,379,513.91,379,409.4V200.15a244.87,244.87,0,0,0,143.25,46.07v-103A142.39,142.39,0,0,1,444.28,120.05Z"></path></g></svg></span><span class="sr-only">MBTA TikTok</span></a></li></ul></li></ul><p class="m-footer__copyright">© Massachusetts Bay Transportation Authority, all rights reserved.</p></div></footer>
