Remove unnecessary divs

--- a/languages/footer-es.html
+++ b/languages/footer-es.html
@@ -197,36 +197,32 @@
         <div class="m-footer__group-title">
           Atención al cliente
         </div>
-        <ul class="list-unstyled">
-          <div class="m-footer--mobile__items">
-            <li class="m-footer__item m-footer--mobile__item">
-              <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support">
-                Contáctenos
-              </a>
-            </li>
-            <li class="m-footer__item m-footer--mobile__item">
-              <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support/lost-and-found">
-                Objetos perdidos
-              </a>
-            </li>
-            <li class="m-footer__item m-footer--mobile__item">
-              <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies">
-                Políticas
-              </a>
-            </li>
-          </div>
-          <div class="hidden-sm-down">
-            <li class="m-footer__item">
-              <a rel="noopener noreferrer" href="https://massachusettsdot.mycusthelp.com/WEBAPP/_rs/supporthome.aspx?lp=3&amp;COID=64D93B66" target="_blank">
-                Solicitar registros públicos
-              </a>
-            </li>
-            <li class="m-footer__item">
-              <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies/title-vi">
-                Derechos civiles
-              </a>
-            </li>
-          </div>
+        <ul class="list-unstyled m-footer--mobile__items">
+          <li class="m-footer__item m-footer--mobile__item">
+            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support">
+              Contáctenos
+            </a>
+          </li>
+          <li class="m-footer__item m-footer--mobile__item">
+            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support/lost-and-found">
+              Objetos perdidos
+            </a>
+          </li>
+          <li class="m-footer__item m-footer--mobile__item">
+            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies">
+              Políticas
+            </a>
+          </li>
+          <li class="m-footer__item">
+            <a rel="noopener noreferrer" href="https://massachusettsdot.mycusthelp.com/WEBAPP/_rs/supporthome.aspx?lp=3&amp;COID=64D93B66" target="_blank">
+              Solicitar registros públicos
+            </a>
+          </li>
+          <li class="m-footer__item">
+            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies/title-vi">
+              Derechos civiles
+            </a>
+          </li>
         </ul>
       </li>
       <li class="m-footer__group">
