--- a/languages/footer-pt.html
+++ b/languages/footer-pt.html
@@ -197,36 +197,32 @@
         <div class="m-footer__group-title">
           Suporte ao cliente
         </div>
-        <ul class="list-unstyled">
-          <div class="m-footer--mobile__items">
-            <li class="m-footer__item m-footer--mobile__item">
-              <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support">
-                Entre em contato conosco
-              </a>
-            </li>
-            <li class="m-footer__item m-footer--mobile__item">
-              <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support/lost-and-found">
-                Achados e perdidos
-              </a>
-            </li>
-            <li class="m-footer__item m-footer--mobile__item">
-              <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies">
-                Políticas
-              </a>
-            </li>
-          </div>
-          <div class="hidden-sm-down">
-            <li class="m-footer__item">
-              <a rel="noopener noreferrer" href="https://massachusettsdot.mycusthelp.com/WEBAPP/_rs/supporthome.aspx?lp=3&amp;COID=64D93B66" target="_blank">
-                Solicitar registros públicos
-              </a>
-            </li>
-            <li class="m-footer__item">
-              <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies/title-vi">
-                Direitos civis
-              </a>
-            </li>
-          </div>
+        <ul class="list-unstyled m-footer--mobile__items">
+          <li class="m-footer__item m-footer--mobile__item">
+            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support">
+              Entre em contato conosco
+            </a>
+          </li>
+          <li class="m-footer__item m-footer--mobile__item">
+            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support/lost-and-found">
+              Achados e perdidos
+            </a>
+          </li>
+          <li class="m-footer__item m-footer--mobile__item">
+            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies">
+              Políticas
+            </a>
+          </li>
+          <li class="m-footer__item">
+            <a rel="noopener noreferrer" href="https://massachusettsdot.mycusthelp.com/WEBAPP/_rs/supporthome.aspx?lp=3&amp;COID=64D93B66" target="_blank">
+              Solicitar registros públicos
+            </a>
+          </li>
+          <li class="m-footer__item">
+            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies/title-vi">
+              Direitos civis
+            </a>
+          </li>
         </ul>
       </li>
       <li class="m-footer__group">
