--- a/languages/footer-zh-cn.html
+++ b/languages/footer-zh-cn.html
@@ -197,36 +197,32 @@
         <div class="m-footer__group-title">
           客户支持
         </div>
-        <ul class="list-unstyled">
-          <div class="m-footer--mobile__items">
-            <li class="m-footer__item m-footer--mobile__item">
-              <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support">
-                联系我们
-              </a>
-            </li>
-            <li class="m-footer__item m-footer--mobile__item">
-              <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support/lost-and-found">
-                失物招领
-              </a>
-            </li>
-            <li class="m-footer__item m-footer--mobile__item">
-              <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies">
-                政策
-              </a>
-            </li>
-          </div>
-          <div class="hidden-sm-down">
-            <li class="m-footer__item">
-              <a rel="noopener noreferrer" href="https://massachusettsdot.mycusthelp.com/WEBAPP/_rs/supporthome.aspx?lp=3&amp;COID=64D93B66" target="_blank">
-                公共请求记录
-              </a>
-            </li>
-            <li class="m-footer__item">
-              <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies/title-vi">
-                公民权利
-              </a>
-            </li>
-          </div>
+        <ul class="list-unstyled m-footer--mobile__items">
+          <li class="m-footer__item m-footer--mobile__item">
+            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support">
+              联系我们
+            </a>
+          </li>
+          <li class="m-footer__item m-footer--mobile__item">
+            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/customer-support/lost-and-found">
+              失物招领
+            </a>
+          </li>
+          <li class="m-footer__item m-footer--mobile__item">
+            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies">
+              政策
+            </a>
+          </li>
+          <li class="m-footer__item">
+            <a rel="noopener noreferrer" href="https://massachusettsdot.mycusthelp.com/WEBAPP/_rs/supporthome.aspx?lp=3&amp;COID=64D93B66" target="_blank">
+              公共请求记录
+            </a>
+          </li>
+          <li class="m-footer__item">
+            <a rel="noopener" data-scroll="true" href="https://www.mbta.com/policies/title-vi">
+              公民权利
+            </a>
+          </li>
         </ul>
       </li>
       <li class="m-footer__group">
