update styles and fonts to latest
* replace fontawesome files for upgrade

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <html lang="en">
   <head>
   <head>
-<link href="styles.054cfd6ef706cc27368d.min.css" rel="stylesheet" integrity="sha256-bU0fnicq0MbIRnNskR5xllvXwvlMSSsPYHXLCABJef8= sha384-4qCx8k2eVrflrcbUjbZ17v+ys4IheW4lLuwf38XLe3N5saU8SY/MpY6GC2mf4lgK" crossorigin="anonymous">
+<link href="styles.08c24f832dd60090f906.min.css" rel="stylesheet" integrity="sha384-RoRv89VNebhNkK/0jeeKIbAp1YpL91Qyi1urBcau75+ftTdmGC84vli+Pgn1mRxg" crossorigin="anonymous">
 </head>
   <body>
     <div class="body-wrapper" id="body-wrapper">
