update JS to latest
* derived from overhauled setup script that removes Bootstrap dependency and introduces an initialization function
* remove minified JS
* add updated instructions to README

--- a/scripts.html
+++ b/scripts.html
@@ -1,1 +1,1 @@
-<script src="header.ebc293eff9559e914734.min.js" integrity="sha256-NRULq8vtKaPSC8TQXQA0/SofWQMoX2v+gykXMYrZJKw= sha384-kcMCSgKK5XE2/1EZq+RjoK0P1LGVPrllG6jYjlepiKeB6h5G9GTYxdiEA044g4xE" crossorigin="anonymous"></script>
+<script src="header.fed159e65a33493423cb.js" integrity="sha384-dGictiJSQU3kSk1jZOjO7kf7h5yA6Z5gJCyFUaClosCOpLLKd7m/8SRLhdeGkFFH" crossorigin="anonymous"></script>
