--- a/languages/header-es.html
+++ b/languages/header-es.html
@@ -711,6 +711,7 @@
                     </div>
                 </div>
             </nav>
+            <div class="search-wrapper"></div>
         </div>
     </div>
     <nav class="m-menu--mobile" id="navmenu">
