--- a/languages/header-pt.html
+++ b/languages/header-pt.html
@@ -717,6 +717,7 @@
                     </div>
                 </div>
             </nav>
+            <div class="search-wrapper"></div>
         </div>
     </div>
     <nav class="m-menu--mobile" id="navmenu">
