Refactor header to remove Bootstrap dependency + more (#8)
* update HTML to latest

* small changes from the font awesome upgrade
* accessibility-related changes

* update styles and fonts to latest

* replace fontawesome files for upgrade

* update JS to latest

* derived from overhauled setup script that removes Bootstrap dependency and introduces an initialization function
* remove minified JS
* add updated instructions to README

* followup update, with React removed from JS

* updated with validated HTML, and updated source JS

- removes React error message

* update with prefixed CSS classnames

+ using PurgeCSS to remove unused CSS selectors

* enhancement: restructure index.html example

Restructured to mimic the shadowDOM-based approach.

* updated with working bg cover / click-to-dismiss

also fixes bugs with footer font family, and veil positioning before DOM load

* add assets-manifest.json, rework preview

--- a/head.html
+++ b/head.html
@@ -1,3 +1,3 @@
 <head>
-<link href="styles.054cfd6ef706cc27368d.min.css" rel="stylesheet" integrity="sha256-bU0fnicq0MbIRnNskR5xllvXwvlMSSsPYHXLCABJef8= sha384-4qCx8k2eVrflrcbUjbZ17v+ys4IheW4lLuwf38XLe3N5saU8SY/MpY6GC2mf4lgK" crossorigin="anonymous">
+<link href="styles.bcd84678c4f571d70a2b.min.css" rel="stylesheet" integrity="sha384-JzC0pypFrO60Zq0qzb3Wquja3rQnxh9la8CaHDLbvUnRpZuBfLJf/pnFSfC/xmk2" crossorigin="anonymous">
 </head>
