--- a/scripts.html
+++ b/scripts.html
@@ -1,1 +1,1 @@
-<script src="header.ebc293eff9559e914734.min.js" integrity="sha256-NRULq8vtKaPSC8TQXQA0/SofWQMoX2v+gykXMYrZJKw= sha384-kcMCSgKK5XE2/1EZq+RjoK0P1LGVPrllG6jYjlepiKeB6h5G9GTYxdiEA044g4xE" crossorigin="anonymous"></script>
+<script src="header.b1f512562af628bb7ec2.js" integrity="sha384-yRdfCwaGxRaWkHK5heuN9FzRwGQgkLOKg04a0uRWqLYo5Tcy1og6wdpoZnyFmo2g" crossorigin="anonymous"></script>
